2018 video and link updates
batch #1

--- a/src/views/actors/affiliates/Charles-Keating.hbs
+++ b/src/views/actors/affiliates/Charles-Keating.hbs
@@ -5,15 +5,21 @@ name: actors
 <h2>Charles Keating, III</h2>
 
 <div class="right-column">
-    <h2>Exhibits</h2>
-    <ul>
-      <li><a href="/files/exhibits/Keating/Keating Pleads Guilty to Fraud_ Legal Saga Ends - Los Angeles Times.pdf">Keating Pleads Guilty to Fraud; Legal Saga Ends - Los Angeles Times</a></li>
-    </ul>
-    </div>
+
+  <h2>Exhibits</h2>
+      <ul>
+              <li><a href="/files/exhibits/Keating/Keating Pleads Guilty to Fraud_ Legal Saga Ends - Los Angeles Times.pdf">Keating Pleads Guilty to Fraud; Legal Saga Ends - Los Angeles Times</a></li>
+      </ul>
+
+  <h2>Video</h2>
+      <ul>
+              <li><a href="/videos/Keating - Part I">Keating - Part I</a></li>
+              <li><a href="/videos/Keating - Part II">Keating - Part II</a></li>
+      </ul>
+
+</div>
 
 <img src="/img/actors/Keating.jpg" alt="Charles Keating" class="float-left">
-
-<p>Charles Keating, III</p>
 <p><u>Owner of ACC and Lincoln S&L</u></p>
 
 <p>Charles Keating grew up in Cincinnati, Ohio. He attended the University of Cincinnati as an undergraduate and, after serving in the Navy, for law school. He became a founding partner of Keating, Muething & Keating in Cincinnati. In 1960, Keating and his client, Carl Lindner, created American Financial Corporation (AFC), a holding company for Lindner’s disparate businesses. Several stockholder lawsuits were filed against AFC and the Securities and Exchange Commission launched a major investigation of the company, charging Linder and Keating of having defrauded investors and filing false SEC reports. Keating resigned from AFC in 1976 and moved to Phoenix, Arizona to run a real estate firm, American Continental Homes (ACH).</p>
