--- a/src/views/actors/affiliates/James-Grogan.hbs
+++ b/src/views/actors/affiliates/James-Grogan.hbs
@@ -2,8 +2,7 @@
 name: actors
 ---
 
-<h2>James Grogan</h2><br />
-<u>ACC Chief Counsel</u>
+<h2>James Grogan</h2>
 
 <div class="right-column">
         <h2>Testimony</h2>
@@ -17,7 +16,8 @@ name: actors
             </ul>
     </div>
 
-<br /><img src="/img/actors/Grogan.jpg" alt="James Grogan" class="float-left" height="120" width="120">
+<img src="/img/actors/Grogan.png" alt="James Grogan" class="float-left">
+<u>ACC Chief Counsel</u>
 
 <p>James “Jim” Grogan was ACC’s chief counsel and <a href="/actors/affiliates/Charles-Keating">Keating’s</a> “right-hand policy man.” Grogan did a significant amount of Keating’s behind-the-scenes work in lobbying various politicians to support different bills that were beneficial to ACC and Lincoln. A number of the senators say that they or their staff dealt mostly with Grogan, not Keating, in the months surrounding the April 1987 meetings. The infamous <a href="/files/exhibits/Lincoln/%234 _Get Black_ Memo 07-15-87.jpeg">“Get Black” memo</a> penned by Keating was addressed to Grogan. During the Senate Ethics Committee hearings, Grogan requested and was granted a private session and was granted immunity for the release of that session’s transcript into evidence.</p>
 
