--- a/src/views/actors/aides/Carolyn-Jordan.hbs
+++ b/src/views/actors/aides/Carolyn-Jordan.hbs
@@ -7,19 +7,19 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="/files/evidence/27">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 1</a></li>
-                <li><a href="/files/evidence/28">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part 2</a></li>
+                <li><a href="/files/evidence/27">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part I</a></li>
+                <li><a href="/files/evidence/28">Testimony - Carolyn Jordan, Senator Cranston's Banking Aide, Part II</a></li>
             </ul>
 
 
         <h2>Video</h2>
-    <ul>
+          <ul>
                 <li><a href="/videos/Jordan - Part I">Jordan - Part I</a></li>
-<li><a href="/videos/Jordan - Part II">Jordan - Part II</a></li>
-            </ul>
+                <li><a href="/videos/Jordan - Part II">Jordan - Part II</a></li>
+          </ul>
     </div>
 
-
+<img src="/img/actors/Carolyn-Jordan.png" alt="Carolyn Jordan" class="float-left">
 <p><u>Senator Cranston’s Chief Banking Aide</u></p>
 <p>Jordan joined Cranston’s banking staff in 1972. As early as
 December of 1984, she met with James Grogan (Lincoln S&L’s general
