--- a/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
+++ b/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
@@ -7,18 +7,21 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="/files/transcripts/Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 1.pdf">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 1</a></li>
-                <li><a href="/files/transcripts/Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 2.pdf">Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 2</a></li>
+                <li><a href="/files/transcripts/Testimony - Gwendolyn VanPaasschen, McCain's Banking Aide, Part I.pdf">Testimony - Gwendolyn VanPaasschen, McCain's Banking Aide, Part I</a></li>
+                <li><a href="/files/transcripts/Testimony - Gwendolyn VanPaasschen, McCain's Banking Aide, Part II.pdf">Testimony - Gwendolyn VanPaasschen, McCain's Banking Aide, Part II</a></li>
+                <li><a href="/files/transcripts/Testimony - Gwendolyn VanPaasschen, McCain's Banking Aide, Part III.pdf">Testimony - Gwendolyn VanPaasschen, McCain's Banking Aide, Part III</a></li>
             </ul>
 
         <h2>Video</h2>
     <ul>
                 <!--<li><a href="https://library.brown.edu/reserves/student/student.php?task=begin&semesterid=37&term=201310">VanPaasschen - Part I</a> (Good Government students only)</li>-->
-                <li><a href="/videos/VanPaasschen">VanPaasschen - Part I</a></li>
+                <li><a href="/videos/VanPaasschen - Part I">VanPaasschen - Part I</a></li>
+                <li><a href="/videos/VanPaasschen - Part II">VanPaasschen - Part II</a></li>
+                <li><a href="/videos/VanPaasschen - Part III">VanPaasschen - Part II</a></li>
             </ul>
     </div>
 
-
+<img src="/img/actors/Gwendolyn-VanPaasschen.png" alt="Gwendolyn VanPaasschen" class="float-left">
 <p><u>Senator McCain's Banking Aide</u>&nbsp;</p>
 <p>There is evidence that VanPaasschen warned McCain to “stay
 away from Keating.” Not only did his “high flying demeanor” put her
