--- a/src/views/actors/aides/Joy-Jacobson.hbs
+++ b/src/views/actors/aides/Joy-Jacobson.hbs
@@ -7,20 +7,20 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%201.pdf">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 1</a></li>
-                <li><a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%202.pdf">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 2</a></li>
-                <li><a href="/files/evidence/38">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part 3</a></li>
+                <li><a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%20I.pdf">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part I</a></li>
+                <li><a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%20II.pdf">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part II</a></li>
+                <li><a href="/files/evidence/38">Testimony - Joy Jacobson, Senator DeConcini's Head Fundraiser, Part III</a></li>
             </ul>
 
         <h2>Video</h2>
     <ul>
                 <li><a href="/videos/Jacobson - Part I">Jacobson - Part I</a></li>
-<li><a href="/videos/Jacobson - Part II">Jacobson - Part II</a></li>
-<li><a href="/videos/Jacobson - Part III">Jacobson - Part III</a></li>
+                <li><a href="/videos/Jacobson - Part II">Jacobson - Part II</a></li>
+                <li><a href="/videos/Jacobson - Part III">Jacobson - Part III</a></li>
             </ul>
     </div>
 
-<img src="/img/actors/Joy-Jacobson.jpg" alt="Joy Jacobson" class="float-left">
+<img src="/img/actors/Joy-Jacobson.png" alt="Joy Jacobson" class="float-left">
 <p><u>Senator Cranston’s Chief Fundraiser</u></p>
 <p>In 1984, Jacobson began working for Cranston as a Senate staff
 member. In 1987, she shifted roles and became his “Fundraising
