--- a/src/views/actors/senators/Dennis-DeConcini.hbs
+++ b/src/views/actors/senators/Dennis-DeConcini.hbs
@@ -7,9 +7,9 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="/files/evidence/29">Testimony - Senator DeConcini's Account of Meeting with McCain</a></li>
-                <li><a href="/files/evidence/30">Testimony - Senator DeConcini: Part 1</a></li>
-                <li><a href="/files/evidence/31">Testimony - Senator DeConcini: Part 2</a></li>
+                <li><a href="/files/evidence/30">Testimony - Senator DeConcini: Part I</a></li>
+                <li><a href="/files/evidence/31">Testimony - Senator DeConcini: Part II</a></li>
+                <li><a href="/files/evidence/29">Testimony - Account of Meeting with McCain</a></li>
             </ul>
 
 
@@ -35,8 +35,8 @@ name: actors
         <h2>Video</h2>
     <ul>
                 <li><a href="/videos/DeConcini - Part I">DeConcini - Part I</a></li>
-<li><a href="/videos/DeConcini - Part II">DeConcini - Part II</a></li>
-<li><a href="/videos/DeConcini - Account of Meeting with McCain">DeConcini - Account of Meeting with McCain</a></li>
+                <li><a href="/videos/DeConcini - Part II">DeConcini - Part II</a></li>
+                <li><a href="/videos/DeConcini - Account of Meeting with McCain">DeConcini - Account of Meeting with McCain</a></li>
             </ul>
     </div>
 
