--- a/src/views/actors/senators/John-McCain.hbs
+++ b/src/views/actors/senators/John-McCain.hbs
@@ -7,9 +7,9 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="/files/evidence/41">Testimony - Senator McCain's Account of Meeting with DeConcini</a></li>
-                <li><a href="/files/evidence/42">Testimony - Senator McCain, Part 1</a></li>
-                <li><a href="/files/evidence/43">Testimony - Senator McCain, Part 2</a></li>
+                <li><a href="/files/evidence/42">Testimony - Senator McCain, Part I</a></li>
+                <li><a href="/files/evidence/43">Testimony - Senator McCain, Part II</a></li>
+                <li><a href="/files/evidence/41">Testimony - Account of Meeting with DeConcini</a></li>
             </ul>
 
 
@@ -31,7 +31,10 @@ name: actors
 
     <h2>Videos</h2>
     <ul>
-      <li><a href="https://library.brown.edu/reserves/student/student.php?task=begin&semesterid=37&term=201310">McCain - All Parts</a> (Good Government students only)</li>
+      <!-- <li><a href="https://library.brown.edu/reserves/student/student.php?task=begin&semesterid=37&term=201310">McCain - All Parts</a> (Good Government students only)</li> -->
+      <li><a href="/videos/McCain - Part I">McCain - Part I</a></li>
+      <li><a href="/videos/McCain - Part II">McCain - Part II</a></li>
+      <li><a href="/videos/McCain - Account of Meeting with DeConcini">McCain - Account of Meeting with DeConcini</a></li>
     </ul>
     </div>
 
