--- a/src/views/actors/supporting_cast/Bill-Seidman.hbs
+++ b/src/views/actors/supporting_cast/Bill-Seidman.hbs
@@ -2,9 +2,10 @@
 name: actors
 ---
 
-<h2><u>Bill Seidman</u></h2>
-<p>FDIC Chairman</p><br /><br />
+<h2>Bill Seidman<</h2>
 
+<img src="/img/actors/Bill-Seidman.png" alt="Bill Seidman" class="float-left"><br />
+<p><u>FDIC Chairman</u></p>
 <p>Bill Seidman was the Chairman of the FDIC, the government agency
 that insures bank accounts, from 1985 to 1991. During this time, he
 oversaw a period of great change: Rising interest rates, deregulation,
