--- a/src/views/actors/supporting_cast/Danny-Wall.hbs
+++ b/src/views/actors/supporting_cast/Danny-Wall.hbs
@@ -2,8 +2,8 @@
 name: actors
 ---
 
-<h2>Danny Wall</h2><br />
-<u>FHLBB Chairman</u><br /><br />
+<h2>Danny Wall</h2>
+<p><u>FHLBB Chairman</u></p>
 
 <p>Wall was the FHLBB Chairman that succeeded Edwin Gray in mid-1987, after
 Gray had stepped down from his post. Some say Wall was more
