--- a/src/views/actors/supporting_cast/Ed-Gray.hbs
+++ b/src/views/actors/supporting_cast/Ed-Gray.hbs
@@ -7,13 +7,13 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="/files/evidence/33">Testimony - Ed Gray, FHLBB Chair, Part 1</a></li>
-                <li><a href="/files/evidence/34">Testimony - Ed Gray, FHLBB Chair, Part 2</a></li>
-                <li><a href="/files/evidence/35">Testimony - Ed Gray, FHLBB Chair, Part 3</a></li>
+                <li><a href="/files/evidence/33">Testimony - Ed Gray, FHLBB Chair, Part I</a></li>
+                <li><a href="/files/evidence/34">Testimony - Ed Gray, FHLBB Chair, Part II</a></li>
+                <li><a href="/files/evidence/35">Testimony - Ed Gray, FHLBB Chair, Part III</a></li>
             </ul>
 
 
-    <h2>Exhibits</h2>
+        <h2>Exhibits</h2>
     <ul>
 
                 <li><a href="/files/exhibits/Gray/%231 Gray Statement 09-19-86.pdf">Exhibit #1 Gray Statement 09-19-86</a></li>
@@ -34,7 +34,7 @@ name: actors
             </ul>
     </div>
 
-
+<img src="/img/actors/Ed-Gray.png" alt="Ed Gray" class="float-left">
 <p><u>Edwin Gray (Bank Board Chairman)</u></p>
 
 <p>In 1984, Ed Gray was appointed chairman of the three-member Federal Home Loan Bank Board. <i>The Washington Post</i> described Gray:</p>
