--- a/src/views/actors/supporting_cast/James-Wright.hbs
+++ b/src/views/actors/supporting_cast/James-Wright.hbs
@@ -2,11 +2,10 @@
 name: actors
 ---
 
-<h2>James “Jim” Wright, Jr</h2><br />
+<h2>James “Jim” Wright, Jr</h2>
+
+<img src="/img/actors/SpeakerWright.jpg" alt="Speaker Wright" class="float-left"><br />
 <u>Texas Congressman and Speaker of the House</u>
-
-
-<img src="/img/actors/SpeakerWright.jpg" alt="Speaker Wright" class="float-left">
 <p>Wright was a Democratic U.S. Congressman from Texas who
 served for 34 years in the U.S. House of Representatives and was the
 Speaker from January 1987 to June 1989. He resigned to avoid being
