--- a/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
+++ b/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
@@ -26,10 +26,11 @@ Lincoln, saying he needed to protect his family from the intense media
 scrutiny. Henkel later reached an agreement with the FHLBB’s
 successor agency that banned him from the banking and thrift
 industries. However, he neither admitted nor denied the charges, and
-continues to “categorically den[y] any wrongdoing.”<sup>1</sup> Henkel said he
-agreed to the settlement only to avoid the cost of litigation.</p>
+continues to “categorically den[y] any wrongdoing.”<a href="#section1"><sup>1
+</sup></a> Henkel said he agreed to the settlement only to avoid the cost of
+litigation.</p>
 
 <hr />
 
-<p><p id="section1"><sup>1</sup></p>http://web.mit.edu/~mkgray/afs/bar/afs/net/user/tytso/usenet/americast/wpost/1435</p>
+<p id="section1"><sup>1</sup><http://web.mit.edu/~mkgray/afs/bar/afs/net/user/tytso/usenet/americast/wpost/1435</p>
 <br clear="all">
