--- a/src/views/actors/supporting_cast/SF-Regulators.hbs
+++ b/src/views/actors/supporting_cast/SF-Regulators.hbs
@@ -14,11 +14,11 @@ name: actors
 
 
 <p>
-<u>William "Bill" Black</u> – <u>FSLIC General Counsel</u><br />
-<u>James Cirona</u> – <u>FHLB-SF President and Principal Supervisory Agent</u><br />
-<u>Michael Patriarca</u> – <u>FHLB-SF Director of Agency Functions</u><br />
-<u>Richard Sanchez</u> – <u>FHLB-SF Supervisory Agent for Lincoln S&L of Irvine,
-CA</u><br /></p><p>
+<u>William "Bill" Black</u> – FSLIC General Counsel<br />
+<u>James Cirona</u> – FHLB-SF President and Principal Supervisory Agent<br />
+<u>Michael Patriarca</u> – FHLB-SF Director of Agency Functions<br />
+<u>Richard Sanchez</u> – FHLB-SF Supervisory Agent for Lincoln S&L of Irvine,
+CA<br /></p><p>
 
 These regulators were summoned to Washington D.C. to discuss the
 FHLB-SF extended examination of Lincoln S&L. The four men were
