--- a/src/views/videos/Jacobson - Part II.hbs
+++ b/src/views/videos/Jacobson - Part II.hbs
@@ -3,5 +3,5 @@ name: actors
 ---
 <iframe width="512" height="330" src="//www.c-span.org/video/standalone/?c4466634" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 <br />
-<a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%202.pdf">Click here for transcript</a><br />
+<a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%20II.pdf">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
