--- a/src/views/videos/Keating - Part I.hbs
+++ b/src/views/videos/Keating - Part I.hbs
@@ -3,5 +3,5 @@ name: actors
 ---
 <iframe frameborder='0' width='512' height='330' scrollable='no' src='https://www.c-span.org/video/standalone/?c4679216'></iframe>
 <br />
-<a href="/files/transcripts/Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 1.pdf">Click here for transcript</a><br />
+<u>No transcript available for this clip</u><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
