--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -4,9 +4,20 @@ name: story
 <p align="center">
     <h2><center><strong>The Banking Crisis: Lincoln, Keating, and Gray</strong></center></h2>
 </p>
+
+
+  <ul id="enduring-pager" class="nav nav-pills">
+    <li><a href="#page1">Part I: Cracks Appear</a></li>
+    <li><a href="#page2">Part II: To the Senate</a></li>
+    <li><a href="#page3">Part III: Appropriate Advocacy or Improper Intervention?</a></li>
+    <li><a href="#page4">Part IV: Fallout</a></li>
+  </ul>
+
 <p>
+    <div class="enduring-page" id="page1">
     <h3><strong>Part I: Cracks Appear</strong></h3>
 </p>
+
 <p>
 For many years, savings and loan banks (S&amp;Ls) were small outfits that assisted Americans on a household scale. These    <a href="/evidence">thrift banks</a>, as they are also known, became a force in the early 20th century by assisting with home
     ownership. Their focus on mortgage lending, saving, and basic investing (typically through passbook savings accounts and certificates of deposit)
@@ -19,7 +30,7 @@ For many years, savings and loan banks (S&amp;Ls) were small outfits that assist
     S&amp;Ls. Industry leaders wanted to be able to act more like full-fledged banks, investing in large ventures with the latitude to make riskier investments
     - and higher profits. On March 31st, 1980, those advocates got their wish when President Carter signed the Depository Institutions Deregulation and
     Monetary Control Act. The law gave S&amp;Ls many of the same capabilities as banks, but without comparable regulation. The Federal Home Loan Bank Board
-    (FHLBB), responsible for regulating thrifts, was suddenly faced with a seismic shift in how its industry did business. Both the regulators and the banks
+    (<a href="/actors/supporting_cast/FHLBB">FHLBB</a>), responsible for regulating thrifts, was suddenly faced with a seismic shift in how its industry did business. Both the regulators and the banks
     were uncertain of the new areas they were moving into - but both knew it would surely involve more than local car loans and basic savings accounts.
 </p>
 <p>
@@ -35,7 +46,7 @@ Corporation (<a href="/actors/affiliates/ACC">ACC</a>). In 1984, ACC bought    <
     the 3-member FHLBB. <em>The Washington Post </em>reported that, "Gray was neither an economist nor a businessman by profession, but rather a born pitchman
     and cheerleader. After a brief episode as a reporter, working in the Madrid bureau of United Press International during the early 1960s, he went into
     public relations and made a career of saying positive things about his employees&#8230; this decidedly average man - brown hair, square face, medium height
-    and build - instinctively shunned controversy and conflict."<sup>1</sup>
+    and build - instinctively shunned controversy and conflict."<a href="#section1"><sup>1</sup></a>
 </p>
 <p>
     As Gray stepped into this leadership position, the savings and loan (S&amp;L) industry was beginning to crack. Lending companies were overextending
@@ -45,7 +56,7 @@ Corporation (<a href="/actors/affiliates/ACC">ACC</a>). In 1984, ACC bought    <
     involvement in the real estate industry was indirect, via homeowners' mortgages and builders' loans. Direct investments, on the other hand, were direct
     cash injections into large-scale building projects that were high reward, but also high-risk. By imposing these regulations, Gray broke away from industry
     trends and forged a more fiscally conservative path with respect to S&amp;Ls. This concerned Keating so much that, in December 1985, he attempted to hire
-    Gray out of his FHLBB position. Gray refused the offer and reported Keating to the Justice Department.<sup>2</sup>
+    Gray out of his FHLBB position. Gray refused the offer and reported Keating to the Justice Department.<a href="#section2"><sup>2</sup></a>
 </p>
 <p>
 Gray's ethics, however, had also been called into question by allegations about inappropriate use of government funds. In December 1986, it was    <a href="/files/evidence/6">reported</a> that Gray has been using FHLBB funds for his wife to accompany him on business trips across
@@ -64,7 +75,7 @@ Gray's ethics, however, had also been called into question by allegations about 
 </p>
 <p>
     Hostilities surfaced at a meeting between the regulators and Keating on July 3rd meant to discuss the preliminary findings of the examination. Keating
-    allegedly berated the examiners and threatened to sue their supervisor.<sup>3</sup> For two weeks, Lincoln's executives refused to permit the examination
+    allegedly berated the examiners and threatened to sue their supervisor.<a href="#section3"><sup>3</sup></a> For two weeks, Lincoln's executives refused to permit the examination
     to continue. Then, Keating insisted that the examiners conduct their examination through Lincoln's New York litigation counsel. This unusual arrangement
     was later approved by the FHLBB with the proviso that Lincoln's counsel move to Phoenix.
 </p>
@@ -82,9 +93,13 @@ San Francisco regulators for an explanation. Three days later, Gray received the
     final Statement of Supervisory Concerns, on February 3rd, 1987, the San Francisco regulators forwarded the Bank Board a summary of its review of Lincoln's
     securities transactions and related corporations.
 </p>
+</div>
+
 <p>
-    <h3><strong>Part II: To the Senate</strong></h3>
+<div class="enduring-page" id="page2">
+<h3><strong>Part II: To the Senate</strong></h3>
 </p>
+
 <p>
 As the regulators were completing the report for Lincoln, Keating was busy currying political favor. He helped raise sizable sums of money for Sens. Alan<a href="/actors/senators/Alan-Cranston">Cranston</a> (D-CA) and Donald    <a href="/actors/senators/Don-Riegle">Riegle</a> (D-MI). On March 3rd, he contributed $100,000 to America Votes (Cranston's voter
     registration organization). Twenty days later, he raised $78,250 for Riegle at a fund-raiser held at Keating's Detroit hotel. ACC lawyer and Keating chief
@@ -141,8 +156,13 @@ that summarized all of the things they wanted the regulators to stop doing and a
     Gray responded he would be happy to meet. DeConcini noted there was no mention of aides during their conversation.
 </p>
 <p>
-    <h3><strong>Part III: Appropriate Advocacy or Improper Intervention?</strong></h3>
+</div>
+
+<p>
+<div class="enduring-page" id="page3">
+<h3><strong>Part III: Appropriate Advocacy or Improper Intervention?</strong></h3>
 </p>
+
 <p>
 The first meeting, held on April 2nd in DeConcini's office, included Gray, as well as four senators: DeConcini, McCain, Cranston, and John    <a href="/actors/senators/John-Glenn">Glenn</a> (D-OH). (Years later, McCain recalled that DeConcini started the meeting with a
     reference to "our friend at Lincoln." McCain characterized this as "an unfortunate choice of words, which Gray would remember and repeat publicly many
@@ -151,7 +171,7 @@ The first meeting, held on April 2nd in DeConcini's office, included Gray, as we
     (VanPaasschen) outside the room in case he had any substantive questions. Neither Cranston nor Glenn brought an aide, but it was not unusual for Glenn to
     attend such meetings alone. The evidence is unclear about the origin of the command for "no aides." DeConcini denies the existence of such an order. We
     know, however, who initiated the meeting. After stressing for several weeks that he was not at the April 2nd meeting with Gray, Riegle eventually
-    acknowledged that the session has been arranged at his suggestion.<sup>4</sup>
+    acknowledged that the session has been arranged at his suggestion.<a href="#section4"><sup>4</sup></a>
 </p>
 <p>
     For Keating, the meeting was a bust. Gray told the senators that, as head of the Bank Board, he was only concerned with the big picture of the S&amp;L
@@ -190,8 +210,8 @@ The first meeting, held on April 2nd in DeConcini's office, included Gray, as we
 <p>
     McCain had previously refused DeConcini's request to meet with Lincoln's auditors. In his book <em>Worth the Fighting For</em>, McCain wrote that though he
     remained "a little troubled" at the prospect of meeting with the regulators, "since the chairman of the Bank Board didn't seem to have a problem with the
-    idea, maybe a discussion with the regulators wouldn't be as problematic as I had earlier thought."<sup>5</sup> McCain testified that he did not sense Gray
-    or the thrift examiners felt threatened by the senators' questioning.
+    idea, maybe a discussion with the regulators wouldn't be as problematic as I had earlier thought."<a href="#section5"><sup>5</sup></a> McCain testified that
+    he did not sense Gray or the thrift examiners felt threatened by the senators' questioning.
 </p>
 <p>
     According to nearly verbatim notes taken by Black, McCain started the second meeting with a careful comment. "One of our jobs as elected officials is to
@@ -228,9 +248,13 @@ The first meeting, held on April 2nd in DeConcini's office, included Gray, as we
     <s>
     </s>
 </p>
+</div>
+
 <p>
-    <h3><strong>Part IV: Fallout</strong></h3>
+<div class="enduring-page" id="page4">
+<h3><strong>Part IV: Fallout</strong></h3>
 </p>
+
 <p>
     Keating and Lincoln became convenient symbols for arguments about what had gone wrong in America's financial system, but the senators did not escape infamy
     either. By the spring of 1990, a deck of playing cards was being marketed, called the "Savings and Loan Scandal," that featured on their face Keating
@@ -260,21 +284,23 @@ The first meeting, held on April 2nd in DeConcini's office, included Gray, as we
     impact on McCain's eventually unsuccessful campaign.
 </p>
 <hr />
+
+<!-- Citations Follow -->
 <p>
-    (1) Maraniss, David, and Rick Atkinson. "In Texas, Thrifts Went on a Binge of Growth Series: THE $150 BILLION CALAMITY Series Number: 1/7." The Washington
-    Post 11 June 1989, Final ed.: a01. ProQuest. Web. 25 Aug. 2013.
+    <p id="section1"><sup>1</sup>Maraniss, David, and Rick Atkinson. "In Texas, Thrifts Went on a Binge of Growth Series: THE $150 BILLION CALAMITY Series Number: 1/7." The Washington
+    Post 11 June 1989, Final ed.: a01. ProQuest. Web. 25 Aug. 2013.</p>
 </p>
 <p>
-    (2) Gray was later charged with ethics violations in connection with industry-paid trips. Someone in the industry leaked the story, possibly Keating.
+    <p id="section2"><sup>2</sup>Gray was later charged with ethics violations in connection with industry-paid trips. Someone in the industry leaked the story, possibly Keating.</p>
 </p>
 <p>
-    (3) In 1987, Keating sent Lincoln's General Counsel a memo to "Get Black," the San Francisco regulator closest to Gray, who took copious notes at the April
-    9th meeting. Keating told Grogan: "If you can't get [former House Speaker Jim] Wright and Congress to get Black - kill him dead - you ought to retire."
+    <p id="section3"><sup>3</sup>In 1987, Keating sent Lincoln's General Counsel a memo to "Get Black," the San Francisco regulator closest to Gray, who took copious notes at the April
+    9th meeting. Keating told Grogan: "If you can't get [former House Speaker Jim] Wright and Congress to get Black - kill him dead - you ought to retire."</p>
 </p>
 <p>
-(4) Knight, Jerry. "Involved in Lincoln S&amp;L Affair, Senate Committee Aide Resigns; Gottlieb, Former Riegle Campaign Chief, Returns to Private Sector."    <em>The Washington Post</em>, January 11, 1990, Final edition, sec. The Federal Page. http://search.proquest.com/docview/307231275 (accessed July 28,
-    2013).
+    <p id="section4"><sup>4</sup>Knight, Jerry. "Involved in Lincoln S&amp;L Affair, Senate Committee Aide Resigns; Gottlieb, Former Riegle Campaign Chief, Returns to Private Sector."    <em>The Washington Post</em>, January 11, 1990, Final edition, sec. The Federal Page. http://search.proquest.com/docview/307231275 (accessed July 28,
+    2013).</p>
 </p>
 <p>
-    (5) McCain, John, and Mark Salter. <em>Worth the fighting for: a memoir</em>. New York: Random House, 2002. p. 179.
+    <p id="section5"><sup>5</sup>McCain, John, and Mark Salter. <em>Worth the fighting for: a memoir</em>. New York: Random House, 2002. p. 179.</p>
 </p>
