--- a/src/views/actors/default.hbs
+++ b/src/views/actors/default.hbs
@@ -140,6 +140,13 @@ name: actors
 
 <div class="actor-panel">
 <h3>
+    <a href="/actors/supporting_cast/FHLBB">
+        FHLBB    </a>
+</h3>
+</div>
+
+<div class="actor-panel">
+<h3>
     <a href="/actors/supporting_cast/Danny-Wall">
         Danny Wall    </a>
 </h3>
@@ -163,5 +170,12 @@ name: actors
 <h3>
     <a href="/actors/supporting_cast/Lee-H-Henkel-Jr">
         Lee H. Henkel Jr.    </a>
+</h3>
+</div>
+
+<div class="actor-panel">
+<h3>
+    <a href="/actors/supporting_cast/William-Proxmire">
+        William Proxmire    </a>
 </h3>
 </div>
