--- a/src/views/actors/senators/Alan-Cranston.hbs
+++ b/src/views/actors/senators/Alan-Cranston.hbs
@@ -25,7 +25,7 @@ name: actors
     </div>
 
 <img src="/img/actors/Alan-Cranston.jpg" alt="Sen. Alan Cranston" class="float-left">
-<p><u>U.S. Senator (D-CA)</u><br></p>
+<p><u>U.S. Senator (D-California)</u><br></p>
 
 <p>Senator Alan Cranston was born and raised in Northern California. After serving in the Army, Cranston co-founded the California Democratic Council (CDC).<a href="#section1"><sup>1</sup></a> The Council was an unofficial assembling of local Democratic outfits that coordinated electoral activities and activism in California. It provided substantial support to Cranston throughout his electoral career. In 1958, he was elected California State Controller. In 1968, he became a U.S. Senator. Cranston served four six-year terms in that position, and was the Democratic Whip from 1977 to 1991. He also rose to become the second-ranking member on the Senate Committee on Banking, Housing and Urban Affairs. In 1984, he ran an unsuccessful campaign for the Democratic presidential nomination, which left him with a $2 million debt.</p>
 
