--- a/src/views/actors/senators/Dennis-DeConcini.hbs
+++ b/src/views/actors/senators/Dennis-DeConcini.hbs
@@ -41,7 +41,7 @@ name: actors
     </div>
 
 <img src="/img/actors/Dennis-DeConcini.jpg" alt="Sen. Dennis DeConcini" class="float-left">
-<p><u>U.S. Senator (D-AZ)</u><br></p>
+<p><u>U.S. Senator (D-Arizona)</u><br></p>
 
 <p>The son of a former Arizona Supreme Court justice, Senator Dennis DeConcini represented the Grand Canyon State in the U.S. Senate from 1977 to 1995. During his two decades in the Senate, DeConcini served on the Senate Appropriations Committee, where he chaired the Subcommittee on Treasury, Postal Service and General Government. He also served on the Senate Judiciary and Select Intelligence Committees and was appointed in 1995 to the board of directors of the Federal Home Loan Mortgage Corporation (Freddy Mac), where he served until 1999.</p>
 
