--- a/src/views/actors/senators/Don-Riegle.hbs
+++ b/src/views/actors/senators/Don-Riegle.hbs
@@ -30,7 +30,7 @@ name: actors
     </div>
 
 <img src="/img/actors/Don-Riegle.jpg" alt="Sen. Don Riegle" class="float-left">
-<p><u>U.S. Senator (D-MI)</u></p>
+<p><u>U.S. Senator (D-Michigan)</u></p>
 
 <p>Born in Flint, Michigan, Senator Donald W. Riegle Jr. began his political career as a U.S. Representative in 1966. He was subsequently re-elected as a Republican congressman in the following three elections from Michigan's 7th congressional district. In 1973, due to differences with the Nixon administration regarding Vietnam and civil rights, Riegle changed party affiliations and became a Democrat. In 1977, he was elected to the U.S. Senate and remained in that position until 1994. While in the Senate, Riegle served as chairman of the Senate Committee on Banking, Housing and Urban Affairs and was a member of the Senate Committee on Finance.</p>
 
