--- a/src/views/actors/senators/John-Glenn.hbs
+++ b/src/views/actors/senators/John-Glenn.hbs
@@ -26,7 +26,7 @@ name: actors
     </div>
 
 <img src="/img/actors/John-Glenn.jpg" alt="Sen. John Glenn" class="float-left">
-<p><u>U.S. Senator (D-OH)</u><br></p>
+<p><u>U.S. Senator (D-Ohio)</u><br></p>
 
 <p>Born and raised in Ohio, former U.S. Marine and NASA astronaut Senator John Glenn was elected to the Senate in 1974, a position he held until 1999. Chief author of the 1978 Nuclear Non-Proliferation Act, Glenn served as chairman of the Committee on Governmental Affairs from 1987 to 1995 and sat on both the Foreign Relations and Armed Services Committees and the Special Committee on Aging.</p>
 
