--- a/src/views/actors/senators/John-McCain.hbs
+++ b/src/views/actors/senators/John-McCain.hbs
@@ -39,7 +39,7 @@ name: actors
     </div>
 
 <img src="/img/actors/John-McCain.jpg" alt="Sen. John McCain" class="float-left">
-<p><u>U.S. Senator (R-AZ)</u><br></p>
+<p><u>U.S. Senator (R-Arizona)</u><br></p>
 
 <p>A native of Northern Virginia, Senator John McCain III moved to Arizona in 1981, retiring as a naval captain after serving in Vietnam and being captured as a POW. Elected to the U.S. House of Representatives in 1983, he served for two terms and was then elected to the U.S. Senate in 1986, easily winning five subsequent re-elections. As a Congressman, he was assigned first to the House Committee on Interior Affairs and then to the House Foreign Affairs Committee.</p>
 
