--- a/src/views/actors/supporting_cast/Bill-Seidman.hbs
+++ b/src/views/actors/supporting_cast/Bill-Seidman.hbs
@@ -2,7 +2,7 @@
 name: actors
 ---
 
-<h2>Bill Seidman<</h2>
+<h2>Bill Seidman</h2>
 
 <img src="/img/actors/Bill-Seidman.png" alt="Bill Seidman" class="float-left"><br />
 <p><u>FDIC Chairman</u></p>
