--- a/src/views/evidence.hbs
+++ b/src/views/evidence.hbs
@@ -8,7 +8,7 @@ name: evidence
     ACC – American Continental Corporation<br />
     FDIC – Federal Deposit Insurance Corporation<br />
     FHLB-SF – Federal Home Loan Bank of San Francisco<br />
-    FHLBB – Federal Home Loan Bank Board<br />
+    FHLBB – Federal Home Loan Bank Board</a><br />
     FSLIC – Federal Savings and Loan Insurance Corporation<br />
     RTC – Resolution Trust Corporation<br />
     S&L – Savings & loan bank (i.e. thrift bank)<br />
@@ -33,11 +33,10 @@ name: evidence
   <div>
     <h3>Background on the S&amp;L Crisis</h3>
     Glassman, James K. <a href="/files/downloads/SL-Background-Glassman-Overview.pdf">"The Great Banks Robbery"</a>. <i>The New Republic</i>, October 8, 1990.<br />
-    Edwin Gray, FHLB Chair, Senate Ethics Committee Hearing. <a href="/files/downloads/SL-Background-Ed-Gray-Testimony.pdf">Excerpt from Opening Statement</a>.
+    Edwin Gray, FHLBB Chair, Senate Ethics Committee Hearing. <a href="/files/downloads/SL-Background-Ed-Gray-Testimony.pdf">Excerpt from Opening Statement</a>.
   </div>
   <div>
     <h3>Website Info</h3>
-    This Keating Five website is a project of Prof. Ross Cheit at Brown University and many student research assistants over the years. Thanks are due especially to Brown for hosting and supporting this project as well as to Michael DOrtenzio and Ryan Chan, former students who have helped to maintain this site. Please e-mail <a href="mailto:info@keatingfive.org">info@keatingfive.org</a> with any comments, questions, and/or feedback.
+    This Keating Five website is a project of <a href="https://vivo.brown.edu/display/rcheit">Prof. Ross Cheit</a> at Brown University and many student research assistants over the years. Thanks are due especially to Brown for hosting and supporting this project as well as to Michael D’Ortenzio and Ryan Chan, former students who have helped to maintain this site. Thank you to C-SPAN, as well, for their coverage of these hearings for making the recordings available to the public. We welcome comments, questions, and/or feedback at <a href="mailto:info@keatingfive.org">info@keatingfive.org</a>.
   </div>
 </div>
-
