--- a/src/views/videos/Keating - Part I.hbs
+++ b/src/views/videos/Keating - Part I.hbs
@@ -1,7 +1,7 @@
 ---
 name: actors
 ---
-<iframe frameborder='0' width='512' height='330' scrollable='no' src='https://www.c-span.org/video/standalone/?c4679216'></iframe>
+<video controls><source src="/files/videos/cut/program.8571.MP4-M20.194.116.mp4" type="video/mp4"></video>
 <br />
 <u>No transcript available for this clip</u><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
