--- a/src/views/videos/Gray - Part III.hbs
+++ b/src/views/videos/Gray - Part III.hbs
@@ -1,7 +1,7 @@
 ---
 name: actors
 ---
-<iframe width="512" height="330" src="//www.c-span.org/video/standalone/?c4466751" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+<video controls><source src="/files/videos/cut/program.10546.MP4-M20.3682.1861.mp4" type="video/mp4"></video>
 <br />
 <a href="/files/evidence/35">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
