--- a/src/views/videos/Jacobson - Part I.hbs
+++ b/src/views/videos/Jacobson - Part I.hbs
@@ -1,7 +1,7 @@
 ---
 name: actors
 ---
-<iframe width="512" height="330" src="//www.c-span.org/video/standalone/?c4466631" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+<video controls><source src="/files/videos/cut/program.10390.MP4-M20.8885.1647.mp4" type="video/mp4"></video>
 <br />
 <a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%20I.pdf">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
