--- a/src/views/videos/VanPaasschen - Part I.hbs
+++ b/src/views/videos/VanPaasschen - Part I.hbs
@@ -1,7 +1,7 @@
 ---
 name: actors
 ---
-<iframe frameborder='0' width='512' height='330' scrollable='no' src='https://www.c-span.org/video/standalone/?c4679216'></iframe>
+<video controls><source src="/files/videos/cut/program.10250.MP4-M20.5791.1318.mp4" type="video/mp4"></video>
 <br />
 <a href="/files/transcripts/Testimony - Gwendolyn VanPaasschen, McCain's Banking Aide, Part I.pdf">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
