--- a/src/views/videos/Glenn.hbs
+++ b/src/views/videos/Glenn.hbs
@@ -3,5 +3,5 @@ name: actors
 ---
 <video controls><source src="/files/videos/cut/program.4726276.MP4-M20.59.2199.mp4" type="video/mp4"></video>
 <br />
-<a href="/files/evidence/32">Click here for transcript</a><br />
+<a target="_blank" href="/files/evidence/32">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
