--- a/src/views/videos/Jacobson - Part II.hbs
+++ b/src/views/videos/Jacobson - Part II.hbs
@@ -3,5 +3,5 @@ name: actors
 ---
 <video controls><source src="/files/videos/cut/program.10391.MP4-M20.64.1203.mp4" type="video/mp4"></video>
 <br />
-<a href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%20II.pdf">Click here for transcript</a><br />
+<a target="_blank" href="/files/transcripts/Testimony%20-%20Joy%20Jacobson%2C%20Senator%20DeConcini%27s%20Head%20Fundraiser%2C%20Part%20II.pdf">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
