--- a/src/views/videos/Jacobson - Part III.hbs
+++ b/src/views/videos/Jacobson - Part III.hbs
@@ -3,5 +3,5 @@ name: actors
 ---
 <video controls><source src="/files/videos/cut/program.10391.MP4-M20.11788.594.mp4" type="video/mp4"></video>
 <br />
-<a href="/files/evidence/38">Click here for transcript</a><br />
+<a target="_blank" href="/files/evidence/38">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
