--- a/src/views/videos/McCain - Part II.hbs
+++ b/src/views/videos/McCain - Part II.hbs
@@ -3,5 +3,5 @@ name: actors
 ---
 <video controls><source src="/files/videos/cut/program.10809.MP4-M20.7379.593.mp4" type="video/mp4"></video>
 <br />
-<a href="/files/evidence/43">Click here for transcript</a><br />
+<a target="_blank" href="/files/evidence/43">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
