--- a/src/views/videos/Sedlmayr - Part I.hbs
+++ b/src/views/videos/Sedlmayr - Part I.hbs
@@ -3,5 +3,5 @@ name: actors
 ---
 <video controls><source src="/files/videos/cut/program.10282.MP4-M20.3263.1203.mp4" type="video/mp4"></video>
 <br />
-<a href="/files/evidence/39">Click here for transcript</a><br />
+<a target="_blank" href="/files/evidence/39">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
