--- a/src/views/videos/VanPaasschen - Part III.hbs
+++ b/src/views/videos/VanPaasschen - Part III.hbs
@@ -1,9 +1,7 @@
 ---
 name: actors
 ---
-<video controls><source src="/files/videos/cut/program.vanp.MP4-M20.961.2650.mp4" type="video/mp4"></video>
-<br />
-<a target="_blank" href="/files/transcripts/Testimony - Gwendolyn VanPaasschen, McCain's Banking Aide, Part III.pdf">Click here for transcript</a><br />
-<a href="javascript:history.go(-1);">Click here to go back</a><br /><br />
+{{> video url="/files/videos/cut/program.vanp.MP4-M20.961.2650.mp4" transcript="/files/transcripts/Testimony - Gwendolyn VanPaasschen, McCain's Banking Aide, Part III.pdf" }}
+<br /><br />
 <u>Note:</u> Part III is lengthy because of a recess in the middle and extended discussion on a scheduling matter between the top of page 200 and<br />
 near the top of page 207. There are also procedural objections between pages 210 and 213. These parts can be skipped over.
