--- a/src/views/videos/DeConcini - Account of Meeting with McCain.hbs
+++ b/src/views/videos/DeConcini - Account of Meeting with McCain.hbs
@@ -1,7 +1,4 @@
 ---
 name: actors
 ---
-<video controls><source src="/files/videos/cut/program.10785.MP4-M20.3798.336.mp4" type="video/mp4"></video>
-<br />
-<a target="_blank" href="/files/evidence/29">Click here for transcript</a><br />
-<a href="javascript:history.go(-1);">Click here to go back</a>
+{{> video url="/files/videos/cut/program.10785.MP4-M20.3798.336.mp4" transcript="/files/evidence/29" }}
