--- a/src/views/videos/Glenn.hbs
+++ b/src/views/videos/Glenn.hbs
@@ -1,7 +1,4 @@
 ---
 name: actors
 ---
-<video controls><source src="/files/videos/cut/program.4726276.MP4-M20.59.2199.mp4" type="video/mp4"></video>
-<br />
-<a target="_blank" href="/files/evidence/32">Click here for transcript</a><br />
-<a href="javascript:history.go(-1);">Click here to go back</a>
+{{> video url="/files/videos/cut/program.4726276.MP4-M20.59.2199.mp4" transcript="/files/evidence/32" }}
