--- a/src/views/videos/Gray - Part I.hbs
+++ b/src/views/videos/Gray - Part I.hbs
@@ -1,7 +1,5 @@
 ---
 name: actors
 ---
-<video controls><source src="/files/videos/cut/program.10292.MP4-M20.5706.1284.mp4" type="video/mp4"></video>
-<br />
-<a target="_blank" href="/files/evidence/33">Click here for transcript</a><br />
-<a href="javascript:history.go(-1);">Click here to go back</a>
+{{> video url="/files/videos/cut/program.10292.MP4-M20.5706.1284.mp4" transcript="/files/evidence/33" }}
+
