--- a/src/views/videos/McCain - Account of Meeting with DeConcini.hbs
+++ b/src/views/videos/McCain - Account of Meeting with DeConcini.hbs
@@ -1,7 +1,5 @@
 ---
 name: actors
 ---
-<video controls><source src="/files/videos/cut/program.10345.MP4-M20.1715.96.mp4" type="video/mp4"></video>
-<br />
-<a target="_blank" href="/files/evidence/41">Click here for transcript</a><br />
-<a href="javascript:history.go(-1);">Click here to go back</a>
+{{> video url="/files/videos/cut/program.10345.MP4-M20.1715.96.mp4" transcript="/files/evidence/41" }}
+
