--- a/src/views/videos/Sedlmayr - Part II.hbs
+++ b/src/views/videos/Sedlmayr - Part II.hbs
@@ -1,7 +1,4 @@
 ---
 name: actors
 ---
-<video controls><source src="/files/videos/cut/program.10282.MP4-M20.10721.291.mp4" type="video/mp4"></video>
-<br />
-<a target="_blank" href="/files/evidence/40">Click here for transcript</a><br />
-<a href="javascript:history.go(-1);">Click here to go back</a>
+{{> video url="/files/videos/cut/program.10282.MP4-M20.10721.291.mp4" transcript="/files/evidence/40" }}
