Link savings and loan crisis to fourth paragraph (Not long after) on Grays page

--- a/src/views/actors/supporting_cast/James-Wright.hbs
+++ b/src/views/actors/supporting_cast/James-Wright.hbs
@@ -10,6 +10,6 @@ name: actors
 served for 34 years in the U.S. House of Representatives and was the
 Speaker from January 1987 to June 1989. He resigned to avoid being
 found guilty by a House committee following his involvement in several
-scandals. One of the more prominent ones was the savings and loan
-crisis.</p>
+scandals. One of the more prominent ones was the <a href="Ed-Gray#savings_and_loan_crisis">savings and loan
+crisis.</a></p>
 <br clear="all">
